test/corpus/assignment-highlight.txt
================================================================================
Variable assignment with keyword
================================================================================

*** Keywords ***

Test Assignment
    ${x}=    Get Number    seed=10

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name
          (text_chunk))
        (body
          (statement
            (variable_assignment
              (variable_name)
              (keyword
                (text_chunk))
              (arguments
                (argument
                  (text_chunk))))))))))
