test/corpus/keyword-embedded-variable.txt
================================================================================
Keyword with variable in name
================================================================================

*** Keywords ***

Keyword with ${variable} in name
    Log    Hello

*** Test Cases ***

Test Variable Keyword
    Keyword with ${variable} in name

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name
          (text_chunk)
          (scalar_variable
            (variable_name))
          (text_chunk))
        (body
          (statement
            (keyword_invocation
              (keyword
                (text_chunk))
              (arguments
                (argument
                  (text_chunk)))))))))
  (section
    (test_cases_section
      (section_header)
      (test_case_definition
        (name)
        (body
          (statement
            (keyword_invocation
              (keyword
                (text_chunk)
                (scalar_variable
                  (variable_name))
                (text_chunk)))))))))
