test/corpus/var-statement.txt
================================================================================
VAR statement
================================================================================

*** Keywords ***

Test VAR
    VAR    ${x}    value
    VAR    ${y}    value    scope=TEST
    VAR    ${z}    value    scope=SUITE

--------------------------------------------------------------------------------

(source_file
  (section
    (keywords_section
      (section_header)
      (keyword_definition
        (name
          (text_chunk))
        (body
          (statement
            (var_statement
              (scalar_variable
                (variable_name))
              (arguments
                (argument
                  (text_chunk)))))
          (statement
            (var_statement
              (scalar_variable
                (variable_name))
              (arguments
                (argument
                  (text_chunk))
                (argument
                  (text_chunk)))))
          (statement
            (var_statement
              (scalar_variable
                (variable_name))
              (arguments
                (argument
                  (text_chunk))
                (argument
                  (text_chunk))))))))))
